# dwmstatus

./: Cargo.toml  README.md  dwmstatus
src/: ]  bat.rs  config.toml  cpu.rs  datetime.rs  lib.rs  main.rs  mem.rs  net.rs  weather.rs
