[package]
name = "rustystatus"
version = "0.1.0"
authors = ["kim <taengoe@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
reqwest = "0.9.11"
dirs = "1.0.5"
# serde = { version = "1.0.89", features = ["derive"] }
serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"
toml = "0.5.0"
